[project]
name = "chiplib"
version = "0.1.0"
description = "Reusable hardware IP blocks in SystemVerilog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "peakrdl-html>=2.12.1",
    "peakrdl-regblock>=1.2.0",
    "peakrdl-uvm>=2.4.0",
    "ruff>=0.15.4",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-peakrdl @ git+https://github.com/subnyquist/sphinx-peakrdl@node-name-in-heading",
    "sphinx-sitemap>=2.9.0",
    "sphinxext-opengraph>=0.13.0",
]

[tool.setuptools.packages.find]
exclude = ["third_party*"]
