[project]
name = "chiplib"
version = "0.1.0"
description = "Reusable hardware IP blocks in SystemVerilog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "peakrdl>=1.5.0",
    "peakrdl-html>=2.12.1",
    "peakrdl-regblock>=1.2.0",
    "peakrdl-uvm>=2.4.0",
    "ruff>=0.15.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
